
[tool.poetry]
name = "speedy_llm_utils" # This is package name
version = "1.1.10"
description = "Utility functions for LLM applications"
requires-python = ">3.5,<4.0"
dependencies = [
    "numpy",
    "pandas",
    "google-generativeai (>=0.8.4,<0.9.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "dspy",
    "json-repair (>=0.40.0,<0.41.0)"
]

[project.scripts]
svllm = "llm_utils.scripts.vllm_serve:main"
svllm-lb = "llm_utils.scripts.vllm_load_balancer:run_load_balancer"
